--- a/tf_articles.html
+++ b/tf_articles.html
@@ -13,7 +13,7 @@
    Filename: tf_articles.html
    -->
    
-   <title>Trusted Friends: Articles of Interest</title>
+   <title>Valerie: Articles of Interest</title>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <link href="tf_reset.css" rel="stylesheet" media="all"/>
@@ -24,7 +24,7 @@
 
 <body>
    <header>
-      <img src="tf_logo.png" alt="Trusted Friends Daycare" />
+      <img src="tf_logo.png" alt="Valerie Daycare" />
       <nav class="horizontal"> <a id="navicon" href="#"><img src="tf_navicon.png" alt="" /></a>
          <ul>
             <li><a href="tf_home.html">Home</a></li>
@@ -61,10 +61,10 @@
       <article>
          <h1 id="acc1">An Accredited Center</h1>
          <img src="tf_photo2.png" alt="" />
-         <p> At Trusted Friends we believe that every child is capable of excellence. 
+         <p> At Valerie we believe that every child is capable of excellence. 
             That is why we are committed to pursuing and maintaining our status as an 
             accredited daycare center. By seeking national accreditation, you know 
-            that Trusted Friends is striving to give your family the very 
+            that Valerie  is striving to give your family the very 
             best daycare experience.</p>
          <h2 id="acc2">What is Accreditation?</h2>
          <p>Every daycare center must meet the state's minimum license requirements. 
@@ -114,14 +114,14 @@
       <article>
          <h1 id="ci1">Our Community</h1>
          <img src="tf_photo3.png" alt="" />
-         <p>Trusted Friends is committed to improving the lives of children in 
+         <p>Valerie is committed to improving the lives of children in 
             our community. Our expertise in caring for the children at our daycare 
             center gives us a unique understanding of child development, education 
-            issues, and parenting. Trusted Friends has partnered with several community 
+            issues, and parenting. Valerie  has partnered with several community 
             organizations that advocate for poor and needy children and families.</p>
          <p>We don't think of it as charity. It's part of our calling.</p>
          <h2 id="ci2">Improving Literacy</h2>
-         <p>Part of Trusted Friend's mission is to promote literacy, which is key to 
+         <p>Part of Valerie's mission is to promote literacy, which is key to 
             education and a fulfilling life. We support reading programs and 
             national literacy efforts initiated at both the local and national 
             level. These efforts include providing early access to books and other 
@@ -140,13 +140,13 @@
             creates learning and enrichment opportunities for underprivileged 
             children, helping them to realize their potential and recognize their
             inherent dignity.</p>
-         <p>Please contact us if you believe that Trusted Friends can be a partner with 
+         <p>Please contact us if you believe that Valerie can be a partner with 
             your group in improving the lives of children and families in our community.</p>
       </article>
    </section>
    
    <footer>
-      Trusted Friends &#8226; 3450 Regency Lane, Carmel IN
+      Valerie  &#8226; 3450 Regency Lane, Carmel IN
    </footer>
 </body>
 </html>
