--- a/tf_home.html
+++ b/tf_home.html
@@ -13,7 +13,7 @@
    Filename: tf_home.html
    -->
    
-   <title>Trusted Friends Daycare</title>
+   <title>Valerie Daycare</title>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <link href="tf_reset.css" rel="stylesheet" />
@@ -59,9 +59,9 @@
    <section>
       <img src="tf_photo1.png" alt="" />
       <article>
-         <p><cite>Trusted Friends Daycare</cite> provides childhood education 
+         <p><cite>Valerie </cite> provides childhood education 
             and daycare, conveniently located for you and your child. We treat each 
-            child based on his or her own individual needs. <cite>Trusted Friends</cite> 
+            child based on his or her own individual needs. <cite>Valerie </cite> 
             provides a qualified and experienced team of educators with expertise in early 
             childhood development.
          </p>
@@ -92,7 +92,7 @@
    </section>
    
    <footer>
-      Trusted Friends &#8226; 3450 Regency Lane, Carmel IN
+      Valerie  &#8226; 3450 Regency Lane, Carmel IN
    </footer>
 </body>
 </html>
