--- a/tf_prek.html
+++ b/tf_prek.html
@@ -13,7 +13,7 @@
    Filename: tf_prek.html
    -->
    
-   <title>Pre-K Classes at Trusted Friends</title>
+   <title>Pre-K Classes at Valerie Daycare</title>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />  
    <link href="tf_reset.css" rel="stylesheet" />
