--- a/tf_home.html
+++ b/tf_home.html
@@ -2,11 +2,7 @@
 <html>
 <head>
    <!--
-   New Perspectives on HTML5 and CSS3, 7th Edition
-   Tutorial 5
-   Tutorial Case
-   
-   Home Page of the Trusted Friends website
+  
    Author: Joseph Boadi
    Date:   9/5/2023
    
@@ -23,7 +19,7 @@
 
 <body>
    <header>
-      <img src="tf_logo.png" alt="Trusted Friends" />
+      <img src="tf_logo.png" alt="Valerie Daycare" />
       
       <nav class="horizontal">
          <ul class="mainmenu">
